# embeddedIntentRecognizer

./: CMakeLists.txt  README.md
data/: City  Time  intents  intents.json  parameters.json  user_inputs.txt
src/: handle_data.cpp  handle_data.hpp  intent.cpp  intent.hpp  main.cpp
tests/: tests.cpp
